# wmnetload

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.in  wmnetload.lsm.in
src/: Makefile.am  ifstat.h  ifstat_freebsd.c  ifstat_linux.c  ifstat_netbsd.c  ifstat_solaris.c  utils.c  utils.h  wmnetload.c
xpm/classic/: backlight_down.xpm  backlight_err.xpm  backlight_off.xpm  backlight_on.xpm  parts.xpm  pixmaps.h
xpm/common/: font.xpm  pixmaps.h
xpm/current/: backlight_down.xpm  backlight_down_off.xpm  backlight_down_on.xpm  backlight_err.xpm  backlight_off.xpm  backlight_on.xpm  parts.xpm  pixmaps.h
